--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "==4.2"
+djangorestframework = "==3.14.0"
+django-cors-headers = "==4.0.0"
+drf-yasg = "==1.21.5"
+line-bot-sdk = "==3.5.1"
 
 [dev-packages]
 
