--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ djangorestframework = "==3.14.0"
 django-cors-headers = "==4.0.0"
 drf-yasg = "==1.21.5"
 line-bot-sdk = "==3.5.1"
+psycopg2-binary = "==2.9.9"
 
 [dev-packages]
 
