--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,34 @@
-version: 1.0
+version: "1.0"
 services:
   db:
-    image: postgres
+    image: postgres:13.2-alpine
+    restart: always
+    container_name: postgres-line
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    networks:
+      - db_network
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgAdmin-line
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL:  ${PGADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+      PGADMIN_LISTEN_PORT: 80
+    ports:
+      - "9101:80"
+    links:
+      - "db:pgsql-server"
+    networks:
+      - db_network
+
+networks:
+  db_network:
+    driver: bridge
