fix: GitHub Actions Pipeline replace compose action into postgreSQL Actions

--- a/.github/workflows/v1_test_pipeline.yml
+++ b/.github/workflows/v1_test_pipeline.yml
@@ -23,10 +23,12 @@ jobs:
           echo "${{ env.ENV_FILE }}" > .env
           source .env
 
-      - name: Docker Compose Action
-        uses: isbang/compose-action@v1.4.1
+      - uses: harmon758/postgresql-action@v1
         with:
-          compose-file: "./docker-compose.yml"
+          postgresql version: '13'
+          postgresql db: ${{ secrets.POSTGRES_DB }}
+          postgresql user: ${{ secrets.POSTGRES_USER}}
+          postgresql password: ${{ secrets.POSTGRES_PASSWORD}}
       - name: Setup Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v2
         with:
