--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ psycopg2-binary = "==2.9.9"
 pyngrok = "==5.0.5"
 firebase-admin = "*"
 mongoengine = "*"
+djangorestframework-xml = "*"
 
 [dev-packages]
 
