--- a/.github/workflows/master_test_pipeline.yml
+++ b/.github/workflows/master_test_pipeline.yml
@@ -23,6 +23,9 @@ jobs:
           echo "${{ env.ENV_FILE }}" > .env
           source .env
 
+      - name: MongoDB in GitHub Actions
+        uses: supercharge/mongodb-github-action@1.10.0
+
       - uses: harmon758/postgresql-action@v1
         with:
           postgresql version: '13'
