--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,8 @@ dnspython = "==2.4.2"
 pymongo = "==3.12.3"
 djongo = "==1.3.6"
 pytz = "==2023.3.post1"
+sqlparse = "==0.2.4"
+python-dateutil = "==2.8.2"
 pytest = "*"
 testcontainers = "*"
 
